# quick-pynecone-demo

./: .dockerignore  .env  .eslintrc  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  commands.txt  install.sh  mypy.ini  pyproject.toml
.github/workflows/: codeql-analysis.yml
.husky/: pre-commit
app/: .gitignore
app/app/: app.py
default/: main.py  main_test.py
default/lib/: calculator.py
notebooks/:  WelcometoColaboratory.ipynb
pynecone-demo/: main.py
scripts/: poetry-update.py
