[tool.poetry]
name = "pynecone-demo"
version = "0.1.0"
description = ""
authors = ["Yannick Aaron Lehr <me@yannickaaron.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pynecone = "^0.1.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.4"
pylint = "^2.16.2"
black = "^23.1.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
coverage = "^7.1.0"
ipykernel = "^6.21.2"
ipynbname = "^2021.3.2"
notebook = "^6.5.2"
toml = "^0.10.2"
nbqa = "^1.6.1"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
ipywidgets = "^8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
